kafka-connnect wip
Former-commit-id: b54142a3da230e4599d6634b3cca38b8dd0cfcd0

--- a/cloud/kafka/kafka-connect-maarek/szi/dk_connect-cluster/source/demo-3/source-twitter-distributed.properties
+++ b/cloud/kafka/kafka-connect-maarek/szi/dk_connect-cluster/source/demo-3/source-twitter-distributed.properties
@@ -8,9 +8,9 @@ key.converter.schemas.enable=true
 value.converter=org.apache.kafka.connect.json.JsonConverter
 value.converter.schemas.enable=true
 # Twitter connector specific configuration
-twitter.consumerkey=9jT7rYU09ELMSibxgVK7tRpRs
-twitter.consumersecret=ggQg21pZLFcexZ0PjTX1zRtG0bHHuWFhMx4DxGfRAVD2xwrHR4
-twitter.token=2932095118-245Itf5j2H01MDrRq0MMPNtPHTIxER4e3Cj2hoD
-twitter.secret=7kAn2qXA7wJJ8k46ySj1lri9Reey9h2NLAxLPtFUkjVgb
-track.terms=programming,java,kafka,scala
+twitter.consumerkey=ZI50GV5d1TpL6R0dLQcgqIfAS
+twitter.consumersecret=23DkLLxmnsjyU30L1EAVBq6WWX9XcbYMAepjiI8PhBJdR8HIko
+twitter.token=34393909-hESlNSOoAYzIu0lF61lK769t1rmqZn6qlEsxeyYD2
+twitter.secret=fFONM6GGU1FZnXlsphoo2YpIIZgOgJgf83iyxV1MTqopb
+track.terms=java,kafka,scala,streaming,cloud
 language=en
