--- a/java8/corelang/corelng/pom.xml
+++ b/java8/corelang/corelng/pom.xml
@@ -19,19 +19,41 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
+        <jakarta-json.version>1.1.6</jakarta-json.version>
+        <jackson.version>2.10.2</jackson.version>
+
+
         <junit-jupter-api.version>5.4.2</junit-jupter-api.version>
         <junit-jupiter-engine.version>5.4.2</junit-jupiter-engine.version>
         <junit-jupiter-params.version>5.1.0</junit-jupiter-params.version>
         <assertj-core.version>3.12.2</assertj-core.version>
+
     </properties>
 
 
     <dependencies>
+        <!-- json -->
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.json</artifactId>
-            <version>1.1.6</version>
+            <version>${jakarta-json.version}</version>
         </dependency>
 
         <!-- test scope -->
