gradle entries in .gitignore , cleaning
Former-commit-id: f49ea5bf2e7a0a977b9b42accd0ffeb06b66dd32

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ target/
 __pycache__/
 #mvn
 target/
+#gradle
+.gradle
+**/build/
+!src/**/build/
+#avoid gradle-wrapper.jar ignoring
+!gradle-wrapper.jar
+.gradletasknamecache
