--- a/java8/corejav11adv_ch/ajava_ch/build.gradle
+++ b/java8/corejav11adv_ch/ajava_ch/build.gradle
@@ -23,6 +23,8 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'org.apache.logging.log4j:log4j-api:2.13.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.13.1'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
