--- a/stream/spark/udspark4javadev/spark4jdevszi/kafkajson/pom.xml
+++ b/stream/spark/udspark4javadev/spark4jdevszi/kafkajson/pom.xml
@@ -13,6 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <lombok.version>1.18.8</lombok.version>
 
         <spark.version>2.4.4</spark.version>
         <scala.binary.version>2.12</scala.binary.version>
@@ -74,6 +75,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
 
     </dependencies>
 
