--- a/stream/spark/udspark4javadev/spark4jdevszi/kafkajson/src/main/resources/log4j.properties
+++ b/stream/spark/udspark4javadev/spark4jdevszi/kafkajson/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=WARN, stdout
 
 #logging for base package
 log4j.logger.org.szi.strucstream=DEBUG, FsLog, stdout
-log4j.additivity.org.szi.strucstream;=false
+log4j.additivity.org.szi.strucstream=false
 
 ## reduce logs for spark packages
 log4j.logger.org.apache.spark=WARN, FsLog, stdout
