avaja11_ch refactored project to use maven

--- a/stream/kafka/maarek-schema-registry-avro/szi/kafka-avro-course/avro-examples/pom.xml
+++ b/stream/kafka/maarek-schema-registry-avro/szi/kafka-avro-course/avro-examples/pom.xml
@@ -38,7 +38,7 @@
             </plugin>
 
 
-            <!--necessary for specific record-->
+            <!--necessary for avro specific record-->
             <plugin>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro-maven-plugin</artifactId>
