--- a/java8/corejav11adv_ch/ajava11_ch_gradle/settings.gradle
+++ b/java8/corejav11adv_ch/ajava11_ch_gradle/settings.gradle
@@ -7,4 +7,4 @@
  * in the user manual at https://docs.gradle.org/6.3/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'ajava_ch'
+rootProject.name = 'ajava11_ch_gradle'
