fix  corelang pom.xml

--- a/java8/core/corelng/pom.xml
+++ b/java8/core/corelng/pom.xml
@@ -16,6 +16,8 @@
         <module>Lombok</module>
         <module>Logging1xx</module>
         <module>Orika</module>
+        <module>DateTimes</module>
+        <module>Intellij</module>
     </modules>
 
     <properties>
