--- a/spring/in28micros/szi/msrv-parent/pom.xml
+++ b/spring/in28micros/szi/msrv-parent/pom.xml
@@ -24,13 +24,21 @@
         <module>jpa-in-10-steps/</module>
         <module>restful-web-services</module>
         <module>restful-web-services-jpa</module>
+        <module>limits-service</module>
+        <module>spring-cloud-config-server</module>
+        <module>currency-exchange-service</module>
+        <module>currency-conversion-service</module>
+        <module>netflix-eureka-naming-server</module>
+        <module>netflix-zuul-api-gateway-server</module>
     </modules>
 
 
     <properties>
         <java.version>11</java.version>
+        <spring-cloud.version>Hoxton.SR6</spring-cloud.version>
         <lombok.version>1.18.8</lombok.version>
         <junit.jupiter.version>5.3.2</junit.jupiter.version>
+
         <!-- plugins -->
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
     </properties>
@@ -101,6 +109,26 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 
 
 </project>
