--- a/java8/core/corelng/pom.xml
+++ b/java8/core/corelng/pom.xml
@@ -18,6 +18,7 @@
         <module>Orika</module>
         <module>DateTimes</module>
         <module>Intellij</module>
+        <module>Xml</module>
     </modules>
 
     <properties>
@@ -70,6 +71,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+
+           <dependency>
+               <groupId>com.fasterxml.jackson.dataformat</groupId>
+               <artifactId>jackson-dataformat-xml</artifactId>
+               <version>${jackson.version}</version>
+           </dependency>
 
         <dependency>
             <groupId>org.glassfish</groupId>
