--- a/spring/in28micros/szi/msrv-parent/limits-service/pom.xml
+++ b/spring/in28micros/szi/msrv-parent/limits-service/pom.xml
@@ -31,6 +31,15 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
