--- a/spring/in28micros/szi/msrv-parent/spring-cloud-config-server/pom.xml
+++ b/spring/in28micros/szi/msrv-parent/spring-cloud-config-server/pom.xml
@@ -22,6 +22,13 @@
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
