--- a/java8/corejav11adv_ch/ajava11_ch/pom.xml
+++ b/java8/corejav11adv_ch/ajava11_ch/pom.xml
@@ -22,6 +22,15 @@
             <version>${guava.version}</version>
         </dependency>
 
+        <!-- asm lib for library engineering-->
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm-all</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+
+
         <!-- logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
