--- a/java8/corejav11adv_ch/ajava11_ch/pom.xml
+++ b/java8/corejav11adv_ch/ajava11_ch/pom.xml
@@ -13,6 +13,8 @@
         <java.version>11</java.version>
         <log4j.version>2.13.1</log4j.version>
         <guava.version>28.2-jre</guava.version>
+        <lombok.version>1.18.8</lombok.version>
+        <logback.version>1.2.3</logback.version>
     </properties>
 
     <dependencies>
@@ -31,25 +33,22 @@
 
 
 
-        <!-- logging -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j.version}</version>
-        </dependency>
 
         <dependency>
-            <!-- test -->
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
+        <!-- logging with lombok-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <!-- scope test -->
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
