--- a/java8/core/corelng/pom.xml
+++ b/java8/core/corelng/pom.xml
@@ -19,38 +19,14 @@
         <module>DateTimes</module>
         <module>Intellij</module>
         <module>Xml</module>
+        <module>Http</module>
     </modules>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>14</java.version>
-
-        <guava-version>28.2-jre</guava-version>
-        <lombok.version>1.18.8</lombok.version>
-        <commons-logging.version>1.2</commons-logging.version>
-        <slf4j.version>1.7.30</slf4j.version>
-
-        <jakarta-json.version>1.1.6</jakarta-json.version>
-        <jackson.version>2.10.2</jackson.version>
-
-        <orika.version>1.5.4</orika.version>
-        <log4j2.version>2.13.1</log4j2.version>
-
-        <!-- testing -->
-        <junit-jupter-api.version>5.4.2</junit-jupter-api.version>
-        <junit-jupiter-engine.version>5.4.2</junit-jupiter-engine.version>
-        <junit-jupiter-params.version>5.1.0</junit-jupiter-params.version>
-        <assertj-core.version>3.12.2</assertj-core.version>
-
-        <!-- plugins -->
-        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
-
-    </properties>
 
     <dependencyManagement>
        <dependencies>
-        <!-- json -->
+
+           <!-- json -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
@@ -90,24 +66,6 @@
                <version>${lombok.version}</version>
            </dependency>
 
-           <!-- slf4j1  -->
-<!--           <dependency>-->
-<!--               <groupId>commons-logging</groupId>-->
-<!--               <artifactId>commons-logging</artifactId>-->
-<!--               <version>${commons-logging.version}</version>-->
-<!--           </dependency>-->
-<!--           <dependency>-->
-<!--               <groupId>org.slf4j</groupId>-->
-<!--               <artifactId>slf4j-api</artifactId>-->
-<!--               <version>${slf4j.version}</version>-->
-<!--           </dependency>-->
-
-<!--           <dependency>-->
-<!--               <groupId>org.slf4j</groupId>-->
-<!--               <artifactId>slf4j-log4j12</artifactId>-->
-<!--               <version>${slf4j.version}</version>-->
-<!--               <scope>test</scope>-->
-<!--           </dependency>-->
 
            <!--  slfj2  -->
             <dependency>
@@ -162,11 +120,128 @@
     </dependencies>
     </dependencyManagement>
 
+
+    <dependencies>
+        <!-- logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${org.slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${org.slf4j.version}</version>
+        </dependency>
+        <!-- test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest-all.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-logger-api</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+            <!-- to get around bug https://github.com/junit-team/junit5/issues/801 -->
+            <scope>test</scope>
+            <optional>true</optional>
+        </dependency>
+
+    </dependencies>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>14</java.version>
+
+        <guava-version>28.2-jre</guava-version>
+        <lombok.version>1.18.8</lombok.version>
+        <jakarta-json.version>1.1.6</jakarta-json.version>
+        <jackson.version>2.10.2</jackson.version>
+
+        <!-- logging -->
+        <commons-logging.version>1.2</commons-logging.version>
+        <org.slf4j.version>1.7.30</org.slf4j.version>
+        <log4j2.version>2.13.1</log4j2.version>
+
+        <logback.version>1.2.3</logback.version>
+
+        <orika.version>1.5.4</orika.version>
+
+        <!-- testing -->
+        <junit-platform.version>1.2.0</junit-platform.version>
+        <junit-jupiter.version>5.2.0</junit-jupiter.version>
+        <junit-jupter-api.version>5.4.2</junit-jupter-api.version>
+        <junit-jupiter-engine.version>5.4.2</junit-jupiter-engine.version>
+        <junit-jupiter-params.version>5.1.0</junit-jupiter-params.version>
+        <assertj-core.version>3.12.2</assertj-core.version>
+        <junit.version>4.12</junit.version>
+        <hamcrest.version>2.2</hamcrest.version>
+        <hamcrest-all.version>1.3</hamcrest-all.version>
+        <mockito.version>3.3.0</mockito.version>
+        <byte-buddy.version>1.10.5</byte-buddy.version>
+
+        <!-- plugins -->
+        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+
+
+    </properties>
+
+
     <build>
         <plugins>
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.3.2</version>
+            <version>${maven-compiler-plugin.version}</version>
             <configuration>
                 <source>${java.version}</source>
                 <target>${java.version}</target>
@@ -177,6 +252,41 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>${maven-surefire-plugin.version}</version>
         </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <excludes>
+                        <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/*IntTest.java</exclude>
+                        <exclude>**/*LongRunningUnitTest.java</exclude>
+                        <exclude>**/*ManualTest.java</exclude>
+                        <exclude>**/JdbcTest.java</exclude>
+                        <exclude>**/*LiveTest.java</exclude>
+                    </excludes>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>${junit-platform.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit-jupiter.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.junit.vintage</groupId>
+                        <artifactId>junit-vintage-engine</artifactId>
+                        <version>${junit-jupiter.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
         </plugins>
     </build>
 
