restclient-wt datetime compare tests

--- a/java8/core/corelng/DateTimes/pom.xml
+++ b/java8/core/corelng/DateTimes/pom.xml
@@ -25,6 +25,16 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 </project>
