--- a/spring/springio_guides/guide_parent/gs-rest-service/pom.xml
+++ b/spring/springio_guides/guide_parent/gs-rest-service/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>com.example</groupId>
 		<artifactId>guide-parent</artifactId>
@@ -9,26 +10,23 @@
 	</parent>
 
 	<groupId>com.example</groupId>
-	<artifactId>scheduling-tasks</artifactId>
+	<artifactId>gs-rest-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>scheduling-tasks</name>
-	<description>Demo project for Spring Boot</description>
-
+	<name>gs-rest-service</name>
+	<description>gs rest service</description>
 
 
 	<dependencies>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>	
+			<artifactId>lombok</artifactId>
 		</dependency>
 
-		<!-- testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -40,30 +38,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-         </dependency>
-
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.awaitility</groupId>
-			<artifactId>awaitility</artifactId>
-			<version>3.1.2</version>
-			<scope>test</scope>
-		</dependency>
-
-
 	</dependencies>
-
 
 
 </project>
