spring guide tutorial building REST services with Spring completed

--- a/spring/springio_guides/guide_parent/pom.xml
+++ b/spring/springio_guides/guide_parent/pom.xml
@@ -23,6 +23,7 @@
         <module>scheduling-tasks</module>
         <module>gs-rest-service</module>
         <module>gs-consuming-rest</module>
+        <module>gs-payroll</module>
     </modules>
 
     <properties>
