corelang add ftp-client module

--- a/java8/core/corelng/pom.xml
+++ b/java8/core/corelng/pom.xml
@@ -23,6 +23,7 @@
         <module>restclient-common</module>
         <module>restclient-wt</module>
         <module>Streaming</module>
+        <module>ftp-client</module>
     </modules>
 
 
