--- a/java8/core/corelng/Generics/pom.xml
+++ b/java8/core/corelng/Generics/pom.xml
@@ -15,7 +15,37 @@
     <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
 
+    <properties>
+    <slf4j.version>1.7.30</slf4j.version>
+    </properties>
+ <dependencies>
 
+     <dependency>
+         <groupId>org.projectlombok</groupId>
+         <artifactId>lombok</artifactId>
+     </dependency>
+
+
+     <dependency>
+         <groupId>org.hamcrest</groupId>
+         <artifactId>hamcrest-core</artifactId>
+     </dependency>
+     <dependency>
+         <groupId>org.hamcrest</groupId>
+         <artifactId>hamcrest-library</artifactId>
+     </dependency>
+     <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+     </dependency>
+     <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>jcl-over-slf4j</artifactId>
+         <version>${slf4j.version}</version>
+         <scope>test</scope>
+     </dependency>
+
+ </dependencies>
 
 
 </project>
