--- a/java8/core/corelng/pom.xml
+++ b/java8/core/corelng/pom.xml
@@ -181,6 +181,13 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>io.rest-assured</groupId>
+                <artifactId>rest-assured</artifactId>
+                <version>${rest.assured-version}</version>
+                <scope>test</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -292,6 +299,7 @@
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <mockito.version>3.3.0</mockito.version>
         <byte-buddy.version>1.10.5</byte-buddy.version>
+        <rest.assured-version>4.2.0</rest.assured-version>
         <!-- plugins -->
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
