--- a/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/02_Locks/pom.xml
+++ b/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/02_Locks/pom.xml
@@ -2,14 +2,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.paumard</groupId>
-  <artifactId>01_executors-futures</artifactId>
+  <artifactId>02-locks</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
-   <url>http://maven.apache.org</url>
+
+  <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
