adv concur patterns ch3 ok wip

--- a/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/pom.xml
+++ b/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>01_executors-futures</module>
         <module>02_Locks</module>
+        <module>03_Barrier</module>
     </modules>
 
 </project>
