--- a/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/03_Barrier/pom.xml
+++ b/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/03_Barrier/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.paumard</groupId>
-  <artifactId>03-Barrier</artifactId>
+  <artifactId>03_Barrier</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
 
