adv concur patterns done

--- a/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/pom.xml
+++ b/java8/concurrency/advanced_java_concurrency_patterns/lab-concur-ptrns/pom.xml
@@ -10,6 +10,8 @@
         <module>01_executors-futures</module>
         <module>02_Locks</module>
         <module>03_Barrier</module>
+        <module>04_AtomicCounter</module>
+        <module>05_ConcurrentQueuesAndMaps</module>
     </modules>
 
 </project>
