--- a/stream/kafka/sz-connectors/connector-github-issues/pom.xml
+++ b/stream/kafka/sz-connectors/connector-github-issues/pom.xml
@@ -9,22 +9,23 @@
 
     <name>connector-github-issues</name>
 
+    <parent>
+        <groupId>org.szi.kafka</groupId>
+        <artifactId>sz-connectors</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+
+
     <properties>
         <!-- <connect-api.version>0.10.2.0-cp1</connect-api.version> -->
-        <connect-api.version>2.4.0</connect-api.version>
         <unirest.version>1.4.9</unirest.version>
-        <junit.version>4.12</junit.version>
-        <commons-io.version>2.4</commons-io.version>
-        <hamcrest.version>2.2</hamcrest.version>
-        <org.slf4j.version>1.7.30</org.slf4j.version>
-        <lombok.version>1.18.8</lombok.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>connect-api</artifactId>
-            <version>${connect-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -37,46 +38,39 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>${org.slf4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>${org.slf4j.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-core</artifactId>
-            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
 
